Add on hover style rules to choc category headings

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -29,7 +29,7 @@
     <!-- Hero image sub text -->
     <div id="hero-image-text-sub-heading">
         <p>
-            <strong>*Guaranteed guilt free</strong>
+            <strong>*guaranteed guilt free</strong>
         </p>
     </div>
 
