--- a/templates/base.html
+++ b/templates/base.html
@@ -68,7 +68,7 @@
       <!-- Logo -->
       <div class="col-12 col-lg-4 my-auto py-2 py-lg-0 text-center text-lg-left">
         <a href="{% url 'home' %}" class="nav-link main-logo-link">
-          <h2 class="purple-text my-1"><strong>Chocelegance <span class="small logo-heart-color">&#10084</span></strong></h2>
+          <h2 class="purple-text my-1 chocelegance-logo-text"><strong>Chocelegance <span class="small logo-heart-color">&#10084</span></strong></h2>
         </a>
       </div>
 
@@ -76,7 +76,7 @@
       <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
         <form method="GET" action="{% url 'chocolates' %}">
           <div class="input-group w-100">
-            <input class="form-control border border-purple rounded-2" type="text" name="q"
+            <input class="form-control border border-purple rounded-lg" type="text" name="q"
               placeholder="Search for chocolates..">
             <div class="input-group-append">
               <button class="form-control btn btn-purple border border-purple rounded-2" type="submit">
