--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -5,7 +5,7 @@
 
         <!-- All Products drop down menu -->
         <li class="nav-item dropdown">
-            <a class="font-weight-bold nav-link mr-5 purple-text h4 glow text-hover-glow" href="#" id="all-products-link"
+            <a class="font-weight-bold nav-link mr-5 purple-text-transition h4" href="#" id="all-products-link"
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 All Chocolates
             </a>
@@ -22,7 +22,7 @@
 
         <!-- Keto chocolate drop down menu -->
         <li class="nav-item dropdown">
-            <a class="font-weight-bold nav-link mr-5 purple-text h4 glow" href="#" id="clothing-link" data-toggle="dropdown"
+            <a class="font-weight-bold nav-link mr-5 purple-text-transition h4" href="#" id="clothing-link" data-toggle="dropdown"
                 aria-haspopup="true" aria-expanded="false">
                 Keto
             </a>
@@ -40,7 +40,7 @@
 
         <!-- Vegan chocolate drop down menu -->
         <li class="nav-item dropdown">
-            <a class="font-weight-bold nav-link mr-5 purple-text h4 glow" href="#" id="homeware-link" data-toggle="dropdown"
+            <a class="font-weight-bold nav-link mr-5 purple-text-transition h4" href="#" id="homeware-link" data-toggle="dropdown"
                 aria-haspopup="true" aria-expanded="false">
                 Vegan
             </a>
@@ -58,7 +58,7 @@
 
         <!-- Gluten-free chocolate drop down menu -->
         <li class="nav-item dropdown">
-            <a class="font-weight-bold nav-link mr-5 purple-text h4 glow" href="#" id="homeware-link" data-toggle="dropdown"
+            <a class="font-weight-bold nav-link mr-5 purple-text-transition h4" href="#" id="homeware-link" data-toggle="dropdown"
                 aria-haspopup="true" aria-expanded="false">
                 Gluten-Free
             </a>
@@ -76,7 +76,7 @@
 
         <!-- Special Offers drop down menu -->
         <li class="nav-item dropdown">
-            <a class="font-weight-bold nav-link purple-text h4 glow" href="#" id="specials-link" data-toggle="dropdown"
+            <a class="font-weight-bold nav-link purple-text-transition h4" href="#" id="specials-link" data-toggle="dropdown"
                 aria-haspopup="true" aria-expanded="false">
                 Special Offers
             </a>
