Add checkout app to project

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -372,7 +372,7 @@ a.category-badge > span.badge:hover {
     border-radius: 10px;
     font-weight: normal;
     transition: all 0.2s ease-in-out;
-    border: 1px solid #882bde;
+    border: 1px solid #551b8c;
     box-shadow: 0 0px 2px #ed82ed;
     color: white;
     text-align: center;
