--- a/static/css/base.css
+++ b/static/css/base.css
@@ -45,7 +45,6 @@ body {
 
 /* Hero image adapted from W3Schools */
 #hero-image-container {
-    align-items: left;
     width: 70%;
     margin-left: 15%;
     margin-right: 15%;
@@ -546,6 +545,6 @@ a.category-badge > span.badge:hover {
     }
 
     body {
-        height: calc(100vh -116px);
+        height: calc(100vh - 116px);
     }
 }
