Register the order and orderadmin models in the admin panel

--- a/chocolates/templates/chocolates/chocolates.html
+++ b/chocolates/templates/chocolates/chocolates.html
@@ -158,6 +158,9 @@
     $('.btt-link').click(function(e) {
         window.scrollTo(0,0);
     });
+
+    // JS Code block validated in JS Hint, no errors
+    
 </script>
 
 <script type="text/javascript">
