Add scale parameter to logo heart symbol animation css

--- a/templates/base.html
+++ b/templates/base.html
@@ -66,9 +66,9 @@
     <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
 
       <!-- Logo -->
-      <div class="col-12 col-lg-4 my-auto py-2 py-lg-0 text-center text-lg-left">
-        <a href="{% url 'home' %}" class="nav-link main-logo-link">
-          <h2 class="purple-text my-1 chocelegance-logo-text"><strong>Chocelegance <span class="small logo-heart-color">&#10084</span></strong></h2>
+      <div class="col-12 col-lg-4 my-auto py-2 py-lg-0 text-center text-lg-left ">
+        <a href="{% url 'home' %}" class="nav-link main-logo-link d-inline-flex">
+          <h2 class="purple-text my-1 chocelegance-logo-text"><strong>Chocelegance</strong></h2><span class="small logo-heart">&#10084</span>
         </a>
       </div>
 
