--- a/static/css/base.css
+++ b/static/css/base.css
@@ -4,6 +4,7 @@ html {
 
 body {
     font-family: "Urbanist", Arial, Helvetica, sans-serif;
+    background: white;
 }
 
 
@@ -228,9 +229,15 @@ link to code is here https://codepen.io/kanishkkunal/pen/obGojO */
 
 
 /* ----------------------------------------- Styling for the heart symbol in the Chocelegance logo -------------------------- */
-.logo-heart-color {
+.logo-heart {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     color: #c71585;
-    text-shadow: 0 0px 15px #ed82ed;
+    text-shadow: 0 0px 9px #ed82ed;
+    margin-left: 1rem;
+    padding-top: .2rem;
+    
 }
 
 
@@ -238,17 +245,19 @@ link to code is here https://codepen.io/kanishkkunal/pen/obGojO */
 Fade in animation was adapted from 
 https://www.geeksforgeeks.org/how-to-create-fade-in-effect-on-page-load-using-css/
 */
-.logo-heart-color {
-    animation: heartFadeIn ease 2s;
+.logo-heart {
+    animation: heartFadeIn ease 1s;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
 }
 
 @keyframes heartFadeIn {
     0% {
+        transform: scale(.7);
         opacity: 0;
     }
     100% {
+        transform: scale(2.3);
         opacity: 1;
     }
 }
