--- a/templates/base.html
+++ b/templates/base.html
@@ -68,7 +68,7 @@
       <!-- Logo -->
       <div class="col-12 col-lg-4 my-auto py-2 py-lg-0 text-center text-lg-left ">
         <a href="{% url 'home' %}" class="nav-link main-logo-link d-inline-flex">
-          <h2 class="purple-text my-1 chocelegance-logo-text"><strong>Chocelegance</strong></h2><span class="small logo-heart">&#10084</span>
+          <h2 class="purple-text my-1 chocelegance-logo-text"><strong>chocelegance</strong></h2><span class="small logo-heart">&#10084</span>
         </a>
       </div>
 
