Make minor adjustments to margins and layout across site

--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -22,7 +22,7 @@
 <div class="container mb-2">
 
     <!-- Shopping bag heading -->
-    <div class="row">
+    <div class="row mt-5">
         <div class="col">
             <hr>
             <h2 class="purple-text mt-5 mb-5 text-center">
