--- a/chocolates/templates/chocolates/chocolate_detail.html
+++ b/chocolates/templates/chocolates/chocolate_detail.html
@@ -21,7 +21,7 @@
 </div>
 
 
-<div class="container-fluid col-8 mx-auto">
+<div class="container-fluid col-8 mt-5 mx-auto">
     <!-- One row split into two columns  -->
     <div class="row">
 
