--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -78,14 +78,14 @@
         <li class="nav-item dropdown">
             <a class="font-weight-bold nav-link purple-text-transition h4" href="#" id="specials-link" data-toggle="dropdown"
                 aria-haspopup="true" aria-expanded="false">
-                Special Offers
+                About
             </a>
-            <div class="dropdown-menu border-purple" aria-labelledby="specials-link">
+            <!-- <div class="dropdown-menu border-purple" aria-labelledby="specials-link">
                 <a href="" class="dropdown-item purple-text">New Arrivals</a>
                 <a href="" class="dropdown-item purple-text">Deals</a>
                 <a href="" class="dropdown-item purple-text">Clearance</a>
                 <a href="" class="dropdown-item purple-text"><strong>All Specials</strong></a>
-            </div>
+            </div> -->
         </li>
     </ul>
 </div>
