--- a/chocolates/templates/chocolates/chocolates.html
+++ b/chocolates/templates/chocolates/chocolates.html
@@ -21,10 +21,10 @@
 </div>
 
 
-<div class="container-fluid col-8 mx-auto">
+<div class="container-fluid col-8 mt-5 mx-auto">
     <!-- First row contains page title and selected categories  -->
     <div class="row">
-        <div class="col text-center mt-5">
+        <div class="col text-center mt-4">
             <!-- <h2 class="logo-font">Chocolates</h2> -->
 
             {% for c in current_categories %}
@@ -37,9 +37,9 @@
 
     <!-- Second row contains the chocolates, this row consists of another two rows -->
     <div class="row">
-        <div class="chocolate-container col-10 offset-1">
+        <div class="chocolate-container col-12">
 
-            <div class="row mt-2 mb-2">
+            <div class="row mt-3 mb-2">
                 <!-- This div contains the sorting options, displays a drop down menu with the options -->
                 <div class="col-12 col-md-6 my-auto order-md-last d-flex justify-content-center justify-content-md-end">
                     <div class="sort-select-wrapper w-50">
