--- a/static/css/base.css
+++ b/static/css/base.css
@@ -62,6 +62,7 @@ body {
     background-size: cover;
     border-radius: 10px;
     border: 1px solid #551b8c;
+    overflow: hidden;
 }
 
 
@@ -75,7 +76,6 @@ body {
     position: relative;
     top: 10%;
     left: 10%;
-    /* transform: translate(-50%, -50%); */
     color: white;
 }
 
