--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -16,7 +16,7 @@
   box-sizing: border-box;
   height: 40px;
   padding: 10px 12px;
-  border: 1px solid transparent;
+  border: 1px solid #551b8c;
   border-radius: 0px;
   background-color: white;
   box-shadow: 0 1px 3px 0 #e6ebf1;
@@ -27,7 +27,7 @@
 .StripeElement--focus,
 .stripe-style-input:focus,
 .stripe-style-input:active {
-  box-shadow: 0 1px 3px 0 #cfd7df;
+  box-shadow: 0 0px 3px 0 #ed82ed;
 }
 
 .StripeElement--webkit-autofill {
@@ -35,7 +35,8 @@
 }
 
 .stripe-style-input::placeholder {
-    color: #aab7c4;
+    color: #551b8c;
+    opacity: .6;
 }
 
 .fieldset-label {
@@ -45,6 +46,8 @@
 
 #payment-form .form-control,
 #card-element {
-    color: #000;
-    border: 1px solid #000;
+    color: #551b8c;
+    font-size: 1rem;
+    border: 1px solid #551b8c;
+    border-radius: 10px;
 }
