--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -24,6 +24,11 @@
   transition: box-shadow 150ms ease;
 }
 
+.StripeElement--invalid {
+    box-shadow: 0 0px 3px 0 #eb1c26 !important;
+}
+
+
 .StripeElement--focus,
 .stripe-style-input:focus,
 .stripe-style-input:active {
