--- a/static/css/base.css
+++ b/static/css/base.css
@@ -234,19 +234,15 @@ link to code is here https://codepen.io/kanishkkunal/pen/obGojO */
     text-shadow: 0 0px 2px #ed82ed;
     margin-left: 1rem;
     padding-top: .2rem;
-    
+    animation: heartFadeIn ease 1s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
 }
-
 
 /* 
 Fade in animation was adapted from 
 https://www.geeksforgeeks.org/how-to-create-fade-in-effect-on-page-load-using-css/
 */
-.logo-heart {
-    animation: heartFadeIn ease 1s;
-    animation-iteration-count: 1;
-    animation-fill-mode: forwards;
-}
 
 @keyframes heartFadeIn {
     0% {
@@ -526,6 +522,11 @@ a.category-badge > span.badge:hover {
 }
 
 
+
+
+.order-confirmation-wrapper {
+    border-radius: 10px;
+}
 
 
 /* -------------------------------------- Media Queries -------------------------------------- */
