Add loading overlay to checkout.html

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -165,6 +165,18 @@
             </div>
         </div>
     </div>
+
+    <div id="loading-overlay">
+        <h1 class="text-light loading-spinner">
+            <span>
+                <span class="logo-heart">&#10084</span>
+            </span>
+        </h1>
+    </div>
+
+
+
+
 {% endblock %}
 
 
