--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -77,14 +77,20 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: #ed82ed20;
+    background: #ed82ed;
+    opacity: .2;
     z-index: 9999;
 }
 
-.loading-spinner {
+.loading-heart {
 	display: flex;
     align-items: center;
     justify-content: center;
     margin: 0;
     height: 100%;
+}
+
+.LightboxModal {
+    background: #ed82ed;
+    opacity: .2;
 }
