--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -166,8 +166,10 @@
         </div>
     </div>
 
+
+    <!-- Loading overlay disaplyed when 'complete order' button clicked -->
     <div id="loading-overlay">
-        <h1 class="text-light loading-spinner">
+        <h1 class="loading-heart">
             <span>
                 <span class="logo-heart">&#10084</span>
             </span>
