--- a/templates/base.html
+++ b/templates/base.html
@@ -111,7 +111,7 @@
                   {% if request.user.is_superuser %}
                   <a href="" class="dropdown-item purple-text">Chocolate Management</a>
                   {% endif %}
-                <a href="" class="dropdown-item purple-text">My Profile</a>
+                <a href="{% url 'profile' %}" class="dropdown-item purple-text">My Profile</a>
                 <a href="{% url 'account_logout' %}" class="dropdown-item purple-text"><strong>Logout</strong></a>
               {% else %}
                 <a href="{% url 'account_signup' %}" class="dropdown-item purple-text">Register</a>
