--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -2,234 +2,235 @@
 {% load static %}
 
 {% block extra_css %}
-    <link rel="stylesheet" href="{% static 'checkout/css/checkout.css' %}">
+<link rel="stylesheet" href="{% static 'checkout/css/checkout.css' %}">
 {% endblock %}
 
 {% block page_header %}
-    <div class="container header-container">
-        <div class="row">
-            <div class="col"></div>
-        </div>
+<div class="container header-container">
+    <div class="row">
+        <div class="col"></div>
     </div>
+</div>
 {% endblock %}
 
 {% block content %}
-    <div class="overlay"></div>
-    <div class="container">
+<div class="overlay"></div>
+<div class="container">
 
-        <!-- Thank you message displayed below -->
-        <div class="row">
-            <div class="col">
-                <br>
-                <h2 class="purple-text large mb-4 text-center">Thank You!<br><br><span class="small logo-heart">&#10084</span></h2>
-                <br>
-                <p class="purple-text text-center">Your order information is below. A confirmation email will be sent to <strong>{{ order.email }}</strong>.</p>
-            </div>
+    <!-- Thank you message displayed below -->
+    <div class="row">
+        <div class="col">
+            <br>
+            <h2 class="purple-text large mb-4 text-center">Thank You!<br><br><span
+                    class="small logo-heart">&#10084</span></h2>
+            <br>
+            <p class="purple-text text-center">Your order information is below. A confirmation email will be sent to
+                <strong>{{ order.email }}</strong>.</p>
         </div>
+    </div>
 
-        <div class="row">
-            <div class="col-lg-8 offset-lg-2 col-sm-12">
+    <div class="row">
+        <div class="col-lg-8 offset-lg-2 col-sm-12">
 
-                <!-- Order confirmation displayed below -->
-                <div class="order-confirmation-wrapper p-4 border-purple">
-                    <div class="row mt-4">
-                        <div class="col">
-                            <h5 class="purple-text font-weight-bold">Order Info:</h5>
-                        </div>
+            <!-- Order confirmation displayed below -->
+            <div class="order-confirmation-wrapper p-4 border-purple">
+                <div class="row mt-4">
+                    <div class="col">
+                        <h5 class="purple-text font-weight-bold">Order Info:</h5>
                     </div>
-
-                    <!-- Order number -->
-                    <div class="row">
-                        <div class="col-12 col-md-4">
-                            <p class="mb-0 purple-text">Order Number</p>
-                        </div>
-                        <div class="col-12 col-md-8 text-md-right active-cart">
-                            <p class="mb-0">{{ order.order_number }}</p>
-                        </div>
-                    </div>
-
-                    <!-- Order date -->
-                    <div class="row">
-                        <div class="col-12 col-md-4">
-                            <p class="mb-0 purple-text">Order Date</p>
-                        </div>
-                        <div class="col-12 col-md-8 text-md-right active-cart">
-                            <p class="mb-0">{{ order.date }}</p>
-                        </div>
-                    </div>
-
-                    <!-- Order details -->
-                    <div class="row mt-4">
-                        <div class="col">
-                            <h5 class="purple-text font-weight-bold">
-                                Purchase Details:
-                            </h5>
-                        </div>
-                    </div>
-
-                    {% for item in order.lineitems.all %}
-                    <div class="row mb-2">
-                        <div class="col-12 col-md-4">
-                            <p class="mb-0 purple-text">
-                                {{ item.chocolate.choc_friendly_name }}
-                            </p>
-                        </div>
-                        <div class="col-12 col-md-8 text-md-right active-cart">
-                            <p class="mb-0"><strong>{{ item.quantity }}</strong> items<br><span class="small"><i>€{{ item.chocolate.choc_price }} p/item</i></span></p>
-                        </div>
-                    </div>
-                    {% endfor %}
-
-                    <!-- Delivery details -->
-                    <div class="row mt-4">
-                        <div class="col">
-                            <h5 class="purple-text font-weight-bold">Delivering To:</h5>
-                        </div>
-                    </div>
-
-                    <!-- Full name -->
-                    <div class="row">
-                        <div class="col-12 col-md-4">
-                            <p class="mb-0 purple-text">Full Name</p>
-                        </div>
-                        <div class="col-12 col-md-8 text-md-right active-cart">
-                            <p class="mb-0">{{ order.full_name }}</p>
-                        </div>
-                    </div>
-
-                    <!-- Address line 1 -->
-                    <div class="row">
-                        <div class="col-12 col-md-4">
-                            <p class="mb-0 purple-text">Address 1</p>
-                        </div>
-                        <div class="col-12 col-md-8 text-md-right active-cart">
-                            <p class="mb-0">{{ order.street_address1 }}</p>
-                        </div>
-                    </div>
-
-                    <!-- Address line 2 -->
-                    {% if order.street_address2 %}
-                    <div class="row">
-                        <div class="col-12 col-md-4">
-                            <p class="mb-0 purple-text">Address 2</p>
-                        </div>
-                        <div class="col-12 col-md-8 text-md-right active-cart">
-                            <p class="mb-0">{{ order.street_address1 }}</p>
-                        </div>
-                    </div>
-                    {% endif %}
-
-                    <!-- County -->
-                    {% if order.county %}
-                    <div class="row">
-                        <div class="col-12 col-md-4">
-                            <p class="mb-0 purple-text">County</p>
-                        </div>
-                        <div class="col-12 col-md-8 text-md-right active-cart">
-                            <p class="mb-0">{{ order.county }}</p>
-                        </div>
-                    </div>
-                    {% endif %}
-
-                    <!-- Town/City -->
-                    <div class="row">
-                        <div class="col-12 col-md-4">
-                            <p class="mb-0 purple-text">Town or City</p>
-                        </div>
-                        <div class="col-12 col-md-8 text-md-right active-cart">
-                            <p class="mb-0">{{ order.town_or_city }}</p>
-                        </div>
-                    </div>
-
-                    <!-- Postcode -->
-                    {% if order.postcode %}
-                    <div class="row">
-                        <div class="col-12 col-md-4">
-                            <p class="mb-0 purple-text">Postal Code</p>
-                        </div>
-                        <div class="col-12 col-md-8 text-md-right active-cart">
-                            <p class="mb-0">{{ order.postcode }}</p>
-                        </div>
-                    </div>
-                    {% endif %}
-
-                    <!-- Country -->
-                    <div class="row">
-                        <div class="col-12 col-md-4">
-                            <p class="mb-0 purple-text">Country</p>
-                        </div>
-                        <div class="col-12 col-md-8 text-md-right active-cart">
-                            <p class="mb-0">{{ order.country }}</p>
-                        </div>
-                    </div>
-
-                    <!-- Phone number -->
-                    <div class="row">
-                        <div class="col-12 col-md-4">
-                            <p class="mb-0 purple-text">Phone Number</p>
-                        </div>
-                        <div class="col-12 col-md-8 text-md-right active-cart">
-                            <p class="mb-0">{{ order.phone_number }}</p>
-                        </div>
-                    </div>
-
-                    <!-- Billing information -->
-                    <div class="row mt-4">
-                        <div class="col">
-                            <h5 class="purple-text font-weight-bold">Billing Info:</h5>
-                        </div>
-                    </div>
-
-                    <!-- Order total -->
-                    <div class="row">
-                        <div class="col-12 col-md-4">
-                            <p class="mb-0 purple-text">Order Total</p>
-                        </div>
-                        <div class="col-12 col-md-8 text-md-right active-cart">
-                            <p class="mb-0">€{{ order.order_total }}</p>
-                        </div>
-                    </div>
-
-                    <!-- Delivery cost -->
-                    <div class="row">
-                        <div class="col-12 col-md-4">
-                            <p class="mb-0 purple-text">Delivery cost</p>
-                        </div>
-                        <div class="col-12 col-md-8 text-md-right active-cart">
-                            <p class="mb-0">€{{ order.delivery_cost }}</p>
-                        </div>
-                    </div>
-
-                    <!-- Grand total -->
-                    <div class="row">
-                        <div class="col-12 col-md-4">
-                            <p class="mb-0 purple-text">Grand Total</p>
-                        </div>
-                        <div class="col-12 col-md-8 text-md-right active-cart">
-                            <p class="mb-0">€{{ order.grand_total }}</p>
-                        </div>
-                    </div>
-
                 </div>
-            </div>
-        </div>
 
-            </div>
-            <div class="row">
-                <div class="col-lg-4 offset-lg-4 col-md-6 offset-3 text-center">
-                    {% if from_profile %}
-                        <a href="{% url 'profile' %}" class="btn btn-purple rounded-lg my-2 w-75">
-                            <p>Back to Profile!</p>
-                        </a>
-                    {% else %}
-                        <a href="{% url 'chocolates' %}" class="btn btn-purple rounded-lg my-2 w-75">
-                            <p>Back to Chocolates!</p>
-                        </a>
-                    {% endif %}
+                <!-- Order number -->
+                <div class="row">
+                    <div class="col-12 col-md-4">
+                        <p class="mb-0 purple-text">Order Number</p>
+                    </div>
+                    <div class="col-12 col-md-8 text-md-right active-cart">
+                        <p class="mb-0">{{ order.order_number }}</p>
+                    </div>
                 </div>
+
+                <!-- Order date -->
+                <div class="row">
+                    <div class="col-12 col-md-4">
+                        <p class="mb-0 purple-text">Order Date</p>
+                    </div>
+                    <div class="col-12 col-md-8 text-md-right active-cart">
+                        <p class="mb-0">{{ order.date }}</p>
+                    </div>
+                </div>
+
+                <!-- Order details -->
+                <div class="row mt-4">
+                    <div class="col">
+                        <h5 class="purple-text font-weight-bold">
+                            Purchase Details:
+                        </h5>
+                    </div>
+                </div>
+
+                {% for item in order.lineitems.all %}
+                <div class="row mb-2">
+                    <div class="col-12 col-md-4">
+                        <p class="mb-0 purple-text">
+                            {{ item.chocolate.choc_friendly_name }}
+                        </p>
+                    </div>
+                    <div class="col-12 col-md-8 text-md-right active-cart">
+                        <p class="mb-0"><strong>{{ item.quantity }}</strong> items<br><span
+                                class="small"><i>€{{ item.chocolate.choc_price }} p/item</i></span></p>
+                    </div>
+                </div>
+                {% endfor %}
+
+                <!-- Delivery details -->
+                <div class="row mt-4">
+                    <div class="col">
+                        <h5 class="purple-text font-weight-bold">Delivering To:</h5>
+                    </div>
+                </div>
+
+                <!-- Full name -->
+                <div class="row">
+                    <div class="col-12 col-md-4">
+                        <p class="mb-0 purple-text">Full Name</p>
+                    </div>
+                    <div class="col-12 col-md-8 text-md-right active-cart">
+                        <p class="mb-0">{{ order.full_name }}</p>
+                    </div>
+                </div>
+
+                <!-- Address line 1 -->
+                <div class="row">
+                    <div class="col-12 col-md-4">
+                        <p class="mb-0 purple-text">Address 1</p>
+                    </div>
+                    <div class="col-12 col-md-8 text-md-right active-cart">
+                        <p class="mb-0">{{ order.street_address1 }}</p>
+                    </div>
+                </div>
+
+                <!-- Address line 2 -->
+                {% if order.street_address2 %}
+                <div class="row">
+                    <div class="col-12 col-md-4">
+                        <p class="mb-0 purple-text">Address 2</p>
+                    </div>
+                    <div class="col-12 col-md-8 text-md-right active-cart">
+                        <p class="mb-0">{{ order.street_address1 }}</p>
+                    </div>
+                </div>
+                {% endif %}
+
+                <!-- County -->
+                {% if order.county %}
+                <div class="row">
+                    <div class="col-12 col-md-4">
+                        <p class="mb-0 purple-text">County</p>
+                    </div>
+                    <div class="col-12 col-md-8 text-md-right active-cart">
+                        <p class="mb-0">{{ order.county }}</p>
+                    </div>
+                </div>
+                {% endif %}
+
+                <!-- Town/City -->
+                <div class="row">
+                    <div class="col-12 col-md-4">
+                        <p class="mb-0 purple-text">Town or City</p>
+                    </div>
+                    <div class="col-12 col-md-8 text-md-right active-cart">
+                        <p class="mb-0">{{ order.town_or_city }}</p>
+                    </div>
+                </div>
+
+                <!-- Postcode -->
+                {% if order.postcode %}
+                <div class="row">
+                    <div class="col-12 col-md-4">
+                        <p class="mb-0 purple-text">Postal Code</p>
+                    </div>
+                    <div class="col-12 col-md-8 text-md-right active-cart">
+                        <p class="mb-0">{{ order.postcode }}</p>
+                    </div>
+                </div>
+                {% endif %}
+
+                <!-- Country -->
+                <div class="row">
+                    <div class="col-12 col-md-4">
+                        <p class="mb-0 purple-text">Country</p>
+                    </div>
+                    <div class="col-12 col-md-8 text-md-right active-cart">
+                        <p class="mb-0">{{ order.country }}</p>
+                    </div>
+                </div>
+
+                <!-- Phone number -->
+                <div class="row">
+                    <div class="col-12 col-md-4">
+                        <p class="mb-0 purple-text">Phone Number</p>
+                    </div>
+                    <div class="col-12 col-md-8 text-md-right active-cart">
+                        <p class="mb-0">{{ order.phone_number }}</p>
+                    </div>
+                </div>
+
+                <!-- Billing information -->
+                <div class="row mt-4">
+                    <div class="col">
+                        <h5 class="purple-text font-weight-bold">Billing Info:</h5>
+                    </div>
+                </div>
+
+                <!-- Order total -->
+                <div class="row">
+                    <div class="col-12 col-md-4">
+                        <p class="mb-0 purple-text">Order Total</p>
+                    </div>
+                    <div class="col-12 col-md-8 text-md-right active-cart">
+                        <p class="mb-0">€{{ order.order_total }}</p>
+                    </div>
+                </div>
+
+                <!-- Delivery cost -->
+                <div class="row">
+                    <div class="col-12 col-md-4">
+                        <p class="mb-0 purple-text">Delivery cost</p>
+                    </div>
+                    <div class="col-12 col-md-8 text-md-right active-cart">
+                        <p class="mb-0">€{{ order.delivery_cost }}</p>
+                    </div>
+                </div>
+
+                <!-- Grand total -->
+                <div class="row">
+                    <div class="col-12 col-md-4">
+                        <p class="mb-0 purple-text">Grand Total</p>
+                    </div>
+                    <div class="col-12 col-md-8 text-md-right active-cart">
+                        <p class="mb-0">€{{ order.grand_total }}</p>
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
+
+</div>
+<div class="row">
+    <div class="col-lg-4 offset-lg-4 col-md-6 offset-3 text-center">
+        {% if from_profile %}
+        <a href="{% url 'profile' %}" class="btn btn-purple rounded-lg my-2 w-75">
+            <p>Back to Profile!</p>
+        </a>
+        {% else %}
+        <a href="{% url 'chocolates' %}" class="btn btn-purple rounded-lg my-2 w-75">
+            <p>Back to Chocolates!</p>
+        </a>
+        {% endif %}
+    </div>
+</div>
+</div>
+</div>
 {% endblock %}
-
-
