--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -68,7 +68,7 @@
                                         <ul class="list-unstyled">
                                             {% for item in order.lineitems.all %}
                                                 <li class="small">
-                                                    {{ item.chocolate.name }} x{{ item.quantity }}
+                                                    {{ item.chocolate.choc_friendly_name }} x{{ item.quantity }}
                                                 </li>
                                             {% endfor %}
                                         </ul>
