--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -34,7 +34,7 @@
                             {% if item.chocolate.choc_image %}
                             <img class="w-100" src="{{ item.chocolate.choc_image.url }}" alt="{{ item.chocolate.choc_friendly_name }}">
                             {% else %}
-                            <img class="w-100" src="{{ MEDIA_URL }}noimage.png" alt="{{ item.chocolate.choc_name }}">
+                            <img class="w-100" src="{{ MEDIA_URL }}noimage.webp" alt="{{ item.chocolate.choc_name }}">
                             {% endif %}
                         </div>
 
