--- a/templates/base.html
+++ b/templates/base.html
@@ -109,7 +109,7 @@
             <div class="dropdown-menu border-purple" aria-labelledby="user-options">
                 {% if request.user.is_authenticated %}
                   {% if request.user.is_superuser %}
-                  <a href="" class="dropdown-item purple-text">Chocolate Management</a>
+                  <a href="{% url 'add_chocolate' %}" class="dropdown-item purple-text">Chocolate Management</a>
                   {% endif %}
                 <a href="{% url 'profile' %}" class="dropdown-item purple-text">My Profile</a>
                 <a href="{% url 'account_logout' %}" class="dropdown-item purple-text"><strong>Logout</strong></a>
