--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -43,7 +43,7 @@
         <div class="dropdown-menu border-purple" aria-labelledby="user-options">
             {% if request.user.is_authenticated %}
             {% if request.user.is_superuser %}
-            <a href="{% url 'account_logout' %}" class="dropdown-item purple-text">Chocolate Management</a>
+            <a href="{% url 'add_chocolate' %}" class="dropdown-item purple-text">Chocolate Management</a>
             {% endif %}
             <a href="#" class="dropdown-item purple-text">My Profile</a>
             <a href="{% url 'account_logout' %}" class="dropdown-item purple-text"><strong>Logout</strong></a>
