--- a/chocolates/templates/chocolates/edit_chocolate.html
+++ b/chocolates/templates/chocolates/edit_chocolate.html
@@ -25,7 +25,7 @@
         <div class="col-12 col-md-6">
 
             <!-- Form used to add chocolate details, enctype attribute allows images to be uploaded -->
-            <form method="POST" action="{% url 'add_chocolate' %}" class="form mb-3" enctype="multipart/form-data">
+            <form method="POST" action="{% url 'edit_chocolate' chocolate.id %}" class="form mb-3" enctype="multipart/form-data">
                 {% csrf_token %}
                 {{ form | crispy}}
                 <div>
