--- a/chocolates/templates/chocolates/chocolate_detail.html
+++ b/chocolates/templates/chocolates/chocolate_detail.html
@@ -78,7 +78,7 @@
                 <p class="mt-3">{{ chocolate.choc_description }}</p>
 
                 <!-- Edit and delete buttons are displayed if user is superuser -->
-                {% request.user.is_superuser %}
+                {% if request.user.is_superuser %}
                 <small class="ml-2">
                     <a href="{% url 'edit_chocolate' chocolate.id %}">Edit</a>
                     <a class=text-danger href="{% url 'delete_chocolate' chocolate.id %}">Delete</a>
