--- a/chocolates/templates/chocolates/add_chocolate.html
+++ b/chocolates/templates/chocolates/add_chocolate.html
@@ -27,7 +27,13 @@
             <!-- Form used to add chocolate details, enctype attribute allows images to be uploaded -->
             <form method="POST" action="{% url 'add_chocolate' %}" class="form mb-3" enctype="multipart/form-data">
                 {% csrf_token %}
-                {{ form | crispy}}
+                {% for field in form %}
+                    {% if field.name != 'choc_image' %}
+                        {{ field | as_crispy_field }}
+                    {% else %}
+                        {{ field }}
+                    {% endif %}
+                {% endfor %}
                 <div>
                     <a class="btn btn-success rounded" href="{% url 'chocolates' %}">Cancel</a>
                     <button class="btn btn-info rounded" type="submit">Add Chocolate</button>
