Add rounded border to toast images

--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -32,9 +32,9 @@
                         <!-- Chocolate image -->
                         <div class="col-3 my-1">
                             {% if item.chocolate.choc_image %}
-                            <img class="w-100" src="{{ item.chocolate.choc_image.url }}" alt="{{ item.chocolate.choc_friendly_name }}">
+                            <img class="w-100 rounded-lg" src="{{ item.chocolate.choc_image.url }}" alt="{{ item.chocolate.choc_friendly_name }}">
                             {% else %}
-                            <img class="w-100" src="{{ MEDIA_URL }}noimage.webp" alt="{{ item.chocolate.choc_name }}">
+                            <img class="w-100 rounded-lg" src="{{ MEDIA_URL }}noimage.webp" alt="{{ item.chocolate.choc_name }}">
                             {% endif %}
                         </div>
 
