--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -61,7 +61,7 @@
                             Spend <strong>€{{ free_delivery_delta }}</strong> more to get free delivery!
                         </p>
                     {% endif %}
-                    <a href="{% url 'view_cart' %}" class="btn btn-purple btn-block rounded-0">
+                    <a href="{% url 'view_cart' %}" id="toast-checkout-button" class="btn btn-block">
                         <span>Go To Secure Checkout</span>
                         <span class="icon">
                             <i class="fas fa-lock"></i>
