Fix typo in image container in cart.html

--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -56,7 +56,7 @@
                     <tr>
                         <!-- Chocolate image -->
                         <td class="p-3 w-25">
-                            {% if item.product.image %}
+                            {% if item.chocolate.choc_image %}
                             <div class="choc-image-container-cart">
                                 <img class="img-fluid rounded" src="{{ item.chocolate.choc_image.url }}" alt="{{ item.chocolate.choc_friendly_name }}">
                             </div>
