Update style rules for hero treat yourself button

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -34,7 +34,7 @@
     </div>
 
     <!-- Treat yourself now button, links to all chocolates -->
-    <div id="shop-button">
+    <div id="treat-yourself-button">
         <p>
             <a href="{% url 'chocolates' %}">Treat yourself now!</a>
         </p>
