--- a/static/css/base.css
+++ b/static/css/base.css
@@ -7,7 +7,7 @@ html {
 body {
     font-family: "Urbanist", Arial, Helvetica, sans-serif;
     background: white;
-    max-width: 72% !important;
+    max-width: 98% !important;
     margin: 0 auto;
 }
 
@@ -198,8 +198,8 @@ https://www.geeksforgeeks.org/how-to-create-fade-in-effect-on-page-load-using-cs
 /* The glow effect for the shop button below was adapted from code by codepen user Kanishk Kunal 
 link to code is here https://codepen.io/kanishkkunal/pen/obGojO */
 
-#shop-button {
-    width: 20rem;
+#treat-yourself-button {
+    width: 15rem;
     position: relative;
     top: 20%;
     left: 10%;
@@ -210,18 +210,18 @@ link to code is here https://codepen.io/kanishkkunal/pen/obGojO */
     box-shadow: 0 0px 15px #ed82ed;
   }
 
-#shop-button:hover{
+#treat-yourself-button:hover{
     background: #c71585;
     border: 1px solid #ed82ed;
     box-shadow: 0 0px 100px #ed82ed;
 }
 
-#shop-button a {
+#treat-yourself-button a {
     padding-top: .7rem;
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 1.8rem;
+    font-size: 1.4rem;
     color: white;
     text-decoration: none;
 }
