Add line breaks to hero text

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -22,7 +22,7 @@
     <!-- Hero image main text -->
     <div id="hero-image-text-heading">
         <p>
-            It's time to <strong>treat*</strong> yourself!
+            It's time to<br><strong>treat*</strong><br>yourself!
         <p>
     </div>
 
