Add mobile only logo version to hero section

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -19,6 +19,15 @@
 
 <div id="hero-image-container">
 
+    <!-- Chocelegance logo, will only be displayed on mobile -->
+    <div id="mobile-logo" class="text-center d-block d-md-none">
+        <a href="{% url 'home' %}" class="nav-link main-logo-link d-inline-flex">
+          <h2 class="purple-text my-1 chocelegance-logo-text"><strong>chocelegance</strong></h2><span class="small logo-heart">&#10084</span>
+        </a>
+      </div>
+
+
+
     <!-- Hero image main text -->
     <div id="hero-image-text-heading">
         <p>
